# mr_pocket_tts

./: README.md  plugin_info.json  pyproject.toml
src/mr_pocket_tts/: __init__.py  audio_pacer.py  mod.py
src/mr_pocket_tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
